# index_3D

index_3d/: CMakeLists.txt
index_3d/source/: main.cpp  r_tree.h
source/: DrawImage.cpp  DrawRegion.cpp  ReaderTextFile.cpp
